# car-engine

./: .gitignore  CMakeLists.txt
src/: README.md  SceneManager.cpp  SceneManager.h  gl_canvas2d.cpp  gl_canvas2d.h  main.cpp
src/base/interfaces/: IRender.h
src/base/vectors/: Matrix.h  Vector2D.h  Vector3D.h  Vector4D.h
src/entities/: CarEngine2D.cpp  CarEngine2D.h
src/entities/engine/2d/: CarEngine2D.cpp  CarEngine2D.h
src/entities/engine/3d/: CarEngine3D.cpp  CarEngine3D.h
src/entities/engine/3d/parts/: Crank.cpp  Crank.h  Piston.cpp  Piston.h
